tests/baselines/reference/project/emitDecoratorMetadataCommonJSISolatedModulesNoResolve/node/emitDecoratorMetadataCommonJSISolatedModulesNoResolve.errors.txt
main.ts(1,21): error TS2307: Cannot find module 'angular2/core' or its corresponding type declarations.


==== tsconfig.json (0 errors) ====
    {
      "compileOnSave": true,
      "compilerOptions": {
        "target": "es5",
        "module": "commonjs",
        "emitDecoratorMetadata": true,
        "experimentalDecorators": true,
        "isolatedModules": true,
        "noResolve": true
      },
      "files": [
        "main.ts"
      ]
    }
==== main.ts (1 errors) ====
    import * as ng from "angular2/core";
                        ~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module 'angular2/core' or its corresponding type declarations.
    
    declare function foo(...args: any[]);
    
    @foo
    export class MyClass1 {
        constructor(private _elementRef: ng.ElementRef){}
    }